Pagina "NoDisponible" y conexion a internet.
Pagina "NoDisponible" Terminada, es una pagina simple de informacion que no se dispone de conexion a internet.
En la pagina "Principal" y en "ContentPage" se compueba si se puede acceder a los datos de AEMET y si es así accede continua, sino muestra la pagina de error "NoDisponible".

--- a/SimpleWeather/Paginas/Principal.xaml
+++ b/SimpleWeather/Paginas/Principal.xaml
@@ -56,7 +56,7 @@
             <ComboBoxItem Content="Madrid"/>
             <ComboBoxItem Content="Sevilla"/>
         </ComboBox>
-        <Frame x:Name="Frame" 
+        <Frame x:Name="FrameDatos" 
                Grid.Row="1" 
                Grid.ColumnSpan="2">
         </Frame>
