--- a/SimpleWeather/Paginas/ContentPage.xaml
+++ b/SimpleWeather/Paginas/ContentPage.xaml
@@ -132,7 +132,7 @@
                Margin="20"
                HorizontalAlignment="Stretch"
                VerticalAlignment="Stretch"
-               Source="ms-appx:///Assets/25 copia.png"/>
+               Source="ms-appx:///Assets/SplashScreen.scale-100.png"/>
         <!--#endregion-->
         <!--#region Informacion Semana-->
         <Border BorderBrush="#FF1E323C" 
@@ -148,7 +148,7 @@
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <!--#region Dia 1-->
+                <!--#region Dia 2-->
                 <Border BorderBrush="#FF1E323C" BorderThickness="1" Grid.Column="0">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -164,7 +164,7 @@
                          Grid.ColumnSpan="2"
                          VerticalAlignment="Center"
                          Margin="5">
-                            <TextBlock x:Name="textFecha1"
+                            <TextBlock x:Name="textFecha2"
                             TextWrapping="Wrap"
                             FontWeight="Normal"
                             TextAlignment="Center"
@@ -176,10 +176,11 @@
                                 <ColumnDefinition Width="3*"/>
                                 <ColumnDefinition Width="2*"/>
                             </Grid.ColumnDefinitions>
-                            <Image Grid.Column="0" 
+                            <Image x:Name="imagenEstadoCieloDia2"
+                                   Grid.Column="0" 
                                    HorizontalAlignment="Stretch"
                                    VerticalAlignment="Stretch"
-                                   Source="ms-appx:///Assets/25 copia.png"
+                                   Source="ms-appx:///Assets/SplashScreen.scale-100.png"
                                    Margin="5"/>
                             <Viewbox Grid.Column="1"
                                      VerticalAlignment="Center"
@@ -216,7 +217,7 @@
                     </Grid>
                 </Border>
                 <!--#endregion-->
-                <!--#region Dia 2-->
+                <!--#region Dia 3-->
                 <Border BorderBrush="#FF1E323C" BorderThickness="1" Grid.Column="1">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -232,7 +233,7 @@
                          Grid.ColumnSpan="2"
                          VerticalAlignment="Center"
                          Margin="5">
-                            <TextBlock x:Name="Fecha2"
+                            <TextBlock x:Name="textFecha3"
                                Text="Lun. 11/10/2016"
                                TextWrapping="Wrap"
                                FontWeight="Normal"
@@ -245,15 +246,17 @@
                                 <ColumnDefinition Width="3*"/>
                                 <ColumnDefinition Width="2*"/>
                             </Grid.ColumnDefinitions>
-                            <Image Grid.Column="0" 
+                            <Image x:Name="imagenEstadoCieloDia3"
+                                   Grid.Column="0" 
                                    HorizontalAlignment="Stretch"
                                    VerticalAlignment="Stretch"
-                                   Source="ms-appx:///Assets/25 copia.png"
+                                   Source="ms-appx:///Assets/SplashScreen.scale-100.png"
                                    Margin="5"/>
                             <Viewbox Grid.Column="1"
                                      VerticalAlignment="Center"
                                      HorizontalAlignment="Center">
-                                <TextBlock Text="☂ 80%"
+                                <TextBlock x:Name="textPrecipitacionesDia3"
+                                           Text="☂ 80%"
                                            TextWrapping="Wrap"
                                            FontWeight="ExtraLight"
                                            TextAlignment="Center"
@@ -261,28 +264,30 @@
                             </Viewbox>
                         </Grid>
                         <Viewbox Grid.Row="2"
-                         Grid.Column="0"
-                          VerticalAlignment="Center">
-                            <TextBlock Text="32º"
-                               TextWrapping="Wrap"
-                               FontWeight="ExtraLight"
-                               TextAlignment="Center"
-                               Foreground="#FF1E323C"/>
+                                 Grid.Column="0"
+                                 VerticalAlignment="Center">
+                            <TextBlock x:Name="textTemperaturaMaximaDia3" 
+                                       Text="32º"
+                                       TextWrapping="Wrap"
+                                       FontWeight="ExtraLight"
+                                       TextAlignment="Center"
+                                       Foreground="#FF1E323C"/>
                         </Viewbox>
 
                         <Viewbox Grid.Row="2"
-                         Grid.Column="1"
-                         VerticalAlignment="Center">
-                            <TextBlock Text="-12º"
-                               TextWrapping="Wrap"
-                               FontWeight="ExtraLight"
-                               TextAlignment="Center"
-                               Foreground="#BF1E323C"/>
+                                 Grid.Column="1"
+                                 VerticalAlignment="Center">
+                            <TextBlock x:Name="textTemperaturaMinimaDia3" 
+                                       Text="-12º"
+                                       TextWrapping="Wrap"
+                                       FontWeight="ExtraLight"
+                                       TextAlignment="Center"
+                                       Foreground="#BF1E323C"/>
                         </Viewbox>
                     </Grid>
                 </Border>
                 <!--#endregion-->
-                <!--#region Dia 3-->
+                <!--#region Dia 4-->
                 <Border BorderBrush="#FF1E323C" BorderThickness="1" Grid.Column="2">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -298,7 +303,7 @@
                          Grid.ColumnSpan="2"
                          VerticalAlignment="Center"
                          Margin="5">
-                            <TextBlock x:Name="Fecha3"
+                            <TextBlock x:Name="textFecha4"
                                 Text="Mar. 12/10/2016"
                                TextWrapping="Wrap"
                                FontWeight="Normal"
@@ -311,15 +316,16 @@
                                 <ColumnDefinition Width="3*"/>
                                 <ColumnDefinition Width="2*"/>
                             </Grid.ColumnDefinitions>
-                            <Image Grid.Column="0" 
+                            <Image x:Name="imagenEstadoCieloDia4" Grid.Column="0" 
                                    HorizontalAlignment="Stretch"
                                    VerticalAlignment="Stretch"
-                                   Source="ms-appx:///Assets/25 copia.png"
+                                   Source="ms-appx:///Assets/SplashScreen.scale-100.png"
                                    Margin="5"/>
                             <Viewbox Grid.Column="1"
                                      VerticalAlignment="Center"
                                      HorizontalAlignment="Center">
-                                <TextBlock Text="☂ 80%"
+                                <TextBlock x:Name="textPrecipitacionesDia4"
+                                           Text="☂ 80%"
                                            TextWrapping="Wrap"
                                            FontWeight="ExtraLight"
                                            TextAlignment="Center"
@@ -327,28 +333,30 @@
                             </Viewbox>
                         </Grid>
                         <Viewbox Grid.Row="2"
-                         Grid.Column="0"
-                          VerticalAlignment="Center">
-                            <TextBlock Text="32º"
-                               TextWrapping="Wrap"
-                               FontWeight="ExtraLight"
-                               TextAlignment="Center"
-                               Foreground="#FF1E323C"/>
+                                 Grid.Column="0"
+                                 VerticalAlignment="Center">
+                            <TextBlock x:Name="textTemperaturaMaximaDia4" 
+                                       Text="32º"
+                                       TextWrapping="Wrap"
+                                       FontWeight="ExtraLight"
+                                       TextAlignment="Center"
+                                       Foreground="#FF1E323C"/>
                         </Viewbox>
 
                         <Viewbox Grid.Row="2"
-                         Grid.Column="1"
-                         VerticalAlignment="Center">
-                            <TextBlock Text="-12º"
-                               TextWrapping="Wrap"
-                               FontWeight="ExtraLight"
-                               TextAlignment="Center"
-                               Foreground="#BF1E323C"/>
+                                 Grid.Column="1"
+                                 VerticalAlignment="Center">
+                            <TextBlock x:Name="textTemperaturaMinimaDia4" 
+                                       Text="-12º"
+                                       TextWrapping="Wrap"
+                                       FontWeight="ExtraLight"
+                                       TextAlignment="Center"
+                                       Foreground="#BF1E323C"/>
                         </Viewbox>
                     </Grid>
                 </Border>
                 <!--#endregion-->
-                <!--#region Dia 4-->
+                <!--#region Dia 5-->
                 <Border BorderBrush="#FF1E323C" BorderThickness="1" Grid.Column="3">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -364,7 +372,7 @@
                          Grid.ColumnSpan="2"
                          VerticalAlignment="Center"
                          Margin="5">
-                            <TextBlock x:Name="Fecha4"
+                            <TextBlock x:Name="textFecha5"
                                 Text="Mier. 13/10/2016"
                                TextWrapping="Wrap"
                                FontWeight="Normal"
@@ -377,15 +385,16 @@
                                 <ColumnDefinition Width="3*"/>
                                 <ColumnDefinition Width="2*"/>
                             </Grid.ColumnDefinitions>
-                            <Image Grid.Column="0" 
+                            <Image x:Name="imagenEstadoCieloDia5" Grid.Column="0" 
                                    HorizontalAlignment="Stretch"
                                    VerticalAlignment="Stretch"
-                                   Source="ms-appx:///Assets/25 copia.png"
+                                   Source="ms-appx:///Assets/SplashScreen.scale-100.png"
                                    Margin="5"/>
                             <Viewbox Grid.Column="1"
                                      VerticalAlignment="Center"
                                      HorizontalAlignment="Center">
-                                <TextBlock Text="☂ 80%"
+                                <TextBlock x:Name="textPrecipitacionesDia5" 
+                                           Text="☂ 80%"
                                            TextWrapping="Wrap"
                                            FontWeight="ExtraLight"
                                            TextAlignment="Center"
@@ -396,7 +405,8 @@
                         <Viewbox Grid.Row="2"
                          Grid.Column="0"
                           VerticalAlignment="Center">
-                            <TextBlock Text="32º"
+                            <TextBlock x:Name="textTemperaturaMaximaDia5" 
+                                Text="32º"
                                TextWrapping="Wrap"
                                FontWeight="ExtraLight"
                                TextAlignment="Center"
@@ -406,7 +416,8 @@
                         <Viewbox Grid.Row="2"
                          Grid.Column="1"
                          VerticalAlignment="Center">
-                            <TextBlock Text="-12º"
+                            <TextBlock x:Name="textTemperaturaMinimaDia5" 
+                                       Text="-12º"
                                TextWrapping="Wrap"
                                FontWeight="ExtraLight"
                                TextAlignment="Center"
@@ -415,7 +426,7 @@
                     </Grid>
                 </Border>
                 <!--#endregion-->
-                <!--#region Dia 5-->
+                <!--#region Dia 6-->
                 <Border BorderBrush="#FF1E323C" BorderThickness="1" Grid.Column="4">
                     <Grid >
                         <Grid.RowDefinitions>
@@ -431,7 +442,7 @@
                          Grid.ColumnSpan="2"
                          VerticalAlignment="Center"
                          Margin="5">
-                            <TextBlock x:Name="Fecha5"
+                            <TextBlock x:Name="textFecha6"
                                 Text="Jue. 14/10/2016"
                                TextWrapping="Wrap"
                                FontWeight="Normal"
@@ -444,15 +455,16 @@
                                 <ColumnDefinition Width="3*"/>
                                 <ColumnDefinition Width="2*"/>
                             </Grid.ColumnDefinitions>
-                            <Image Grid.Column="0" 
+                            <Image x:Name="imagenEstadoCieloDia6" Grid.Column="0" 
                                    HorizontalAlignment="Stretch"
                                    VerticalAlignment="Stretch"
-                                   Source="ms-appx:///Assets/25 copia.png"
+                                   Source="ms-appx:///Assets/SplashScreen.scale-100.png"
                                    Margin="5"/>
                             <Viewbox Grid.Column="1"
                                      VerticalAlignment="Center"
                                      HorizontalAlignment="Center">
-                                <TextBlock Text="☂ 80%"
+                                <TextBlock x:Name="textPrecipitacionesDia6"
+                                           Text="☂ 80%"
                                            TextWrapping="Wrap"
                                            FontWeight="ExtraLight"
                                            TextAlignment="Center"
@@ -462,7 +474,8 @@
                         <Viewbox Grid.Row="2"
                          Grid.Column="0"
                           VerticalAlignment="Center">
-                            <TextBlock Text="32º"
+                            <TextBlock x:Name="textTemperaturaMaximaDia6"
+                                       Text="32º"
                                TextWrapping="Wrap"
                                FontWeight="ExtraLight"
                                TextAlignment="Center"
@@ -472,7 +485,8 @@
                         <Viewbox Grid.Row="2"
                          Grid.Column="1"
                          VerticalAlignment="Center">
-                            <TextBlock Text="-12º"
+                            <TextBlock x:Name="textTemperaturaMinimaDia6"
+                                       Text="-12º"
                                TextWrapping="Wrap"
                                FontWeight="ExtraLight"
                                TextAlignment="Center"
@@ -481,7 +495,7 @@
                     </Grid>
                 </Border>
                 <!--#endregion-->
-                <!--#region Dia 6-->
+                <!--#region Dia 7-->
                 <Border BorderBrush="#FF1E323C" BorderThickness="1" Grid.Column="5">
                     <Grid>
                         <Grid.RowDefinitions>
@@ -497,7 +511,7 @@
                          Grid.ColumnSpan="2"
                          VerticalAlignment="Center"
                          Margin="5">
-                            <TextBlock x:Name="Fecha6"
+                            <TextBlock x:Name="textFecha7"
                                 Text="Vier. 15/10/2016"
                                TextWrapping="Wrap"
                                FontWeight="Normal"
@@ -510,15 +524,16 @@
                                 <ColumnDefinition Width="3*"/>
                                 <ColumnDefinition Width="2*"/>
                             </Grid.ColumnDefinitions>
-                            <Image Grid.Column="0" 
+                            <Image x:Name="imagenEstadoCieloDia7" Grid.Column="0" 
                                    HorizontalAlignment="Stretch"
                                    VerticalAlignment="Stretch"
-                                   Source="ms-appx:///Assets/25 copia.png"
+                                   Source="ms-appx:///Assets/SplashScreen.scale-100.png"
                                    Margin="5"/>
                             <Viewbox Grid.Column="1"
                                      VerticalAlignment="Center"
                                      HorizontalAlignment="Center">
-                                <TextBlock Text="☂ 80%"
+                                <TextBlock x:Name="textPrecipitacionesDia7"
+                                           Text="☂ 80%"
                                            TextWrapping="Wrap"
                                            FontWeight="ExtraLight"
                                            TextAlignment="Center"
@@ -528,7 +543,8 @@
                         <Viewbox Grid.Row="2"
                          Grid.Column="0"
                           VerticalAlignment="Center">
-                            <TextBlock Text="32º"
+                            <TextBlock x:Name="textTemperaturaMaximaDia7"
+                                       Text="32º"
                                TextWrapping="Wrap"
                                FontWeight="ExtraLight"
                                TextAlignment="Center" 
@@ -537,7 +553,8 @@
                         <Viewbox Grid.Row="2"
                          Grid.Column="1"
                          VerticalAlignment="Center">
-                            <TextBlock Text="-12º"
+                            <TextBlock x:Name="textTemperaturaMinimaDia7"
+                                       Text="-12º"
                                TextWrapping="Wrap"
                                FontWeight="ExtraLight"
                                TextAlignment="Center"
