Municipios nuevas y mejora sintetización de código:
Se han añadido los municipios españoles con mas de 20000 habitantes.

Se ha creado una clase "Metodos.cs" la cual engloba varios metodos que utiliza la aplicación.

Metodos añadidos:

"getFranjaHoraria()" que antes se encontraba en "LecturaXml.cs"
"getHora()" que antes se encontraba en "LecturaXml.cs"
"Ciudad()" que antes se encontraba en "Principal.xaml.cs"(Además en "Ciudad()" se han añadido los municipios Españoles con mas de 20000 habitantes)
"Conexion()" que antes se encontraba en "Principal.xaml.cs"

Cambios en la clase "Principal.xaml" se han añadido los municipios Españoles de mas de 20000 habitantes.

--- a/SimpleWeather/Paginas/Principal.xaml
+++ b/SimpleWeather/Paginas/Principal.xaml
@@ -44,15 +44,328 @@
                   IsDropDownOpen="True" 
                   Foreground="White" 
                   BorderBrush="{x:Null}" 
-                  SelectedIndex="0" 
+                  SelectedIndex="67" 
                   Background="{x:Null}"
                   FontSize="20" 
                   SelectionChanged="comboBoxCiudades_SelectionChanged" >
-            <ComboBoxItem Content="Cáceres"/>
-            <ComboBoxItem Content="Badajoz"/>
-            <ComboBoxItem Content="Merida"/>
-            <ComboBoxItem Content="Madrid"/>
-            <ComboBoxItem Content="Sevilla"/>
+            <!--#region Ciudades-->
+            <ComboBoxItem Content="Adeje"/>
+            <ComboBoxItem Content="Adra	"/>
+            <ComboBoxItem Content="Águilas	"/>
+            <ComboBoxItem Content="Agüimes	"/>
+            <ComboBoxItem Content="Albacete	"/>
+            <ComboBoxItem Content="Alboraya	"/>
+            <ComboBoxItem Content="Alcalá de Guadaíra	"/>
+            <ComboBoxItem Content="Alcalá de Henares	"/>
+            <ComboBoxItem Content="Alcalá la Real	"/>
+            <ComboBoxItem Content="Alcantarilla	"/>
+            <ComboBoxItem Content="Alcázar de San Juan	"/>
+            <ComboBoxItem Content="Alcobendas	"/>
+            <ComboBoxItem Content="Alcorcón	"/>
+            <ComboBoxItem Content="Alcoy	"/>
+            <ComboBoxItem Content="Alfafar	"/>
+            <ComboBoxItem Content="Algeciras	"/>
+            <ComboBoxItem Content="Algemesí	"/>
+            <ComboBoxItem Content="Algete	"/>
+            <ComboBoxItem Content="Alhama de Murcia	"/>
+            <ComboBoxItem Content="Alhaurín de la Torre	"/>
+            <ComboBoxItem Content="Alhaurín el Grande	"/>
+            <ComboBoxItem Content="Alicante	"/>
+            <ComboBoxItem Content="Almansa	"/>
+            <ComboBoxItem Content="Almazora	"/>
+            <ComboBoxItem Content="Almendralejo	"/>
+            <ComboBoxItem Content="Almería	"/>
+            <ComboBoxItem Content="Almonte	"/>
+            <ComboBoxItem Content="Almuñécar	"/>
+            <ComboBoxItem Content="Altea	"/>
+            <ComboBoxItem Content="Ames	"/>
+            <ComboBoxItem Content="Amposta	"/>
+            <ComboBoxItem Content="Andújar	"/>
+            <ComboBoxItem Content="Antequera	"/>
+            <ComboBoxItem Content="Aranda de Duero	"/>
+            <ComboBoxItem Content="Aranjuez	"/>
+            <ComboBoxItem Content="Arcos de la Frontera	"/>
+            <ComboBoxItem Content="Arganda del Rey	"/>
+            <ComboBoxItem Content="Armilla	"/>
+            <ComboBoxItem Content="Arona	"/>
+            <ComboBoxItem Content="Arrecife	"/>
+            <ComboBoxItem Content="Arucas	"/>
+            <ComboBoxItem Content="Aspe	"/>
+            <ComboBoxItem Content="Ávila	"/>
+            <ComboBoxItem Content="Avilés	"/>
+            <ComboBoxItem Content="Ayamonte	"/>
+            <ComboBoxItem Content="Azuqueca de Henares	"/>
+            <ComboBoxItem Content="Badajoz	"/>
+            <ComboBoxItem Content="Badalona	"/>
+            <ComboBoxItem Content="Baena	"/>
+            <ComboBoxItem Content="Baracaldo	"/>
+            <ComboBoxItem Content="Barañáin	"/>
+            <ComboBoxItem Content="Barbate	"/>
+            <ComboBoxItem Content="Barberá del Vallés	"/>
+            <ComboBoxItem Content="Barcelona	"/>
+            <ComboBoxItem Content="Basauri	"/>
+            <ComboBoxItem Content="Baza	"/>
+            <ComboBoxItem Content="Benalmádena	"/>
+            <ComboBoxItem Content="Benicarló	"/>
+            <ComboBoxItem Content="Benidorm	"/>
+            <ComboBoxItem Content="Bétera	"/>
+            <ComboBoxItem Content="Bilbao	"/>
+            <ComboBoxItem Content="Blanes	"/>
+            <ComboBoxItem Content="Boadilla del Monte	"/>
+            <ComboBoxItem Content="Burgos	"/>
+            <ComboBoxItem Content="Burjassot	"/>
+            <ComboBoxItem Content="Burriana	"/>
+            <ComboBoxItem Content="Cabra	"/>
+            <ComboBoxItem Content="Cáceres	"/>
+            <ComboBoxItem Content="Cádiz	"/>
+            <ComboBoxItem Content="Calafell	"/>
+            <ComboBoxItem Content="Calahorra	"/>
+            <ComboBoxItem Content="Calatayud	"/>
+            <ComboBoxItem Content="Calviá	"/>
+            <ComboBoxItem Content="Camargo	"/>
+            <ComboBoxItem Content="Camas	"/>
+            <ComboBoxItem Content="Cambre	"/>
+            <ComboBoxItem Content="Cambrils	"/>
+            <ComboBoxItem Content="Campello	"/>
+            <ComboBoxItem Content="Candelaria	"/>
+            <ComboBoxItem Content="Caravaca de la Cruz	"/>
+            <ComboBoxItem Content="Carballo	"/>
+            <ComboBoxItem Content="Carcagente	"/>
+            <ComboBoxItem Content="Carmona	"/>
+            <ComboBoxItem Content="Cartagena	"/>
+            <ComboBoxItem Content="Cártama	"/>
+            <ComboBoxItem Content="Castellar del Vallés	"/>
+            <ComboBoxItem Content="Castellón de la Plana	"/>
+            <ComboBoxItem Content="Castrillón	"/>
+            <ComboBoxItem Content="Castro-Urdiales	"/>
+            <ComboBoxItem Content="Catarroja	"/>
+            <ComboBoxItem Content="Ceuta	"/>
+            <ComboBoxItem Content="Chiclana de la Frontera	"/>
+            <ComboBoxItem Content="Ciempozuelos	"/>
+            <ComboBoxItem Content="Cieza	"/>
+            <ComboBoxItem Content="Ciudad Real	"/>
+            <ComboBoxItem Content="Coín	"/>
+            <ComboBoxItem Content="Collado Villalba	"/>
+            <ComboBoxItem Content="Colmenar Viejo	"/>
+            <ComboBoxItem Content="Conil de la Frontera	"/>
+            <ComboBoxItem Content="Córdoba	"/>
+            <ComboBoxItem Content="Coria del Río	"/>
+            <ComboBoxItem Content="Cornellá de Llobregat	"/>
+            <ComboBoxItem Content="Coslada	"/>
+            <ComboBoxItem Content="Cuenca	"/>
+            <ComboBoxItem Content="Cullera	"/>
+            <ComboBoxItem Content="Culleredo	"/>
+            <ComboBoxItem Content="Denia	"/>
+            <ComboBoxItem Content="Don Benito	"/>
+            <ComboBoxItem Content="Dos Hermanas	"/>
+            <ComboBoxItem Content="Durango	"/>
+            <ComboBoxItem Content="Écija	"/>
+            <ComboBoxItem Content="Éibar	"/>
+            <ComboBoxItem Content="El Ejido	"/>
+            <ComboBoxItem Content="El Masnou	"/>
+            <ComboBoxItem Content="El Prat de Llobregat	"/>
+            <ComboBoxItem Content="El Puerto de Santa María	"/>
+            <ComboBoxItem Content="Elche	"/>
+            <ComboBoxItem Content="Elda	"/>
+            <ComboBoxItem Content="Erandio	"/>
+            <ComboBoxItem Content="Estepona	"/>
+            <ComboBoxItem Content="Ferrol	"/>
+            <ComboBoxItem Content="Fuengirola	"/>
+            <ComboBoxItem Content="Fuenlabrada	"/>
+            <ComboBoxItem Content="Galapagar	"/>
+            <ComboBoxItem Content="Gáldar	"/>
+            <ComboBoxItem Content="Gandía	"/>
+            <ComboBoxItem Content="Gavá	"/>
+            <ComboBoxItem Content="Girona	"/>
+            <ComboBoxItem Content="Getafe	"/>
+            <ComboBoxItem Content="Gijón	"/>
+            <ComboBoxItem Content="Granada	"/>
+            <ComboBoxItem Content="Granadilla de Abona	"/>
+            <ComboBoxItem Content="Granollers	"/>
+            <ComboBoxItem Content="Guadalajara	"/>
+            <ComboBoxItem Content="Guadix	"/>
+            <ComboBoxItem Content="Guía de Isora	"/>
+            <ComboBoxItem Content="Hellín	"/>
+            <ComboBoxItem Content="Hospitalet de Llobregat	"/>
+            <ComboBoxItem Content="Huelva	"/>
+            <ComboBoxItem Content="Huesca	"/>
+            <ComboBoxItem Content="Ibi	"/>
+            <ComboBoxItem Content="ibiza	"/>
+            <ComboBoxItem Content="Icod de los Vinos	"/>
+            <ComboBoxItem Content="Igualada	"/>
+            <ComboBoxItem Content="Illescas	"/>
+            <ComboBoxItem Content="Inca	"/>
+            <ComboBoxItem Content="Ingenio	"/>
+            <ComboBoxItem Content="Irún	"/>
+            <ComboBoxItem Content="Isla Cristina	"/>
+            <ComboBoxItem Content="Jaén	"/>
+            <ComboBoxItem Content="Jerez de la Frontera	"/>
+            <ComboBoxItem Content="Jumilla	"/>
+            <ComboBoxItem Content="La Coruña	"/>
+            <ComboBoxItem Content="La Estrada	"/>
+            <ComboBoxItem Content="La Línea de la Concepción	"/>
+            <ComboBoxItem Content="La Oliva	"/>
+            <ComboBoxItem Content="La Orotava	"/>
+            <ComboBoxItem Content="La Rinconada	"/>
+            <ComboBoxItem Content="Laguna de Duero	"/>
+            <ComboBoxItem Content="Lalín	"/>
+            <ComboBoxItem Content="Langreo	"/>
+            <ComboBoxItem Content="Las Palmas de Gran Canaria	"/>
+            <ComboBoxItem Content="Las Rozas de Madrid	"/>
+            <ComboBoxItem Content="Las Torres de Cotillas	"/>
+            <ComboBoxItem Content="Lebrija	"/>
+            <ComboBoxItem Content="Leganés	"/>
+            <ComboBoxItem Content="León	"/>
+            <ComboBoxItem Content="Lepe	"/>
+            <ComboBoxItem Content="Lérida	"/>
+            <ComboBoxItem Content="Linares	"/>
+            <ComboBoxItem Content="Lloret de Mar	"/>
+            <ComboBoxItem Content="Logroño	"/>
+            <ComboBoxItem Content="Loja	"/>
+            <ComboBoxItem Content="Lorca	"/>
+            <ComboBoxItem Content="Los Barrios	"/>
+            <ComboBoxItem Content="Los Llanos de Aridane	"/>
+            <ComboBoxItem Content="Los Palacios y Villafranca	"/>
+            <ComboBoxItem Content="Los Realejos	"/>
+            <ComboBoxItem Content="Lucena	"/>
+            <ComboBoxItem Content="Lugo	"/>
+            <ComboBoxItem Content="Madrid	"/>
+            <ComboBoxItem Content="Mahón	"/>
+            <ComboBoxItem Content="Mairena del Alcor	"/>
+            <ComboBoxItem Content="Mairena del Aljarafe	"/>
+            <ComboBoxItem Content="Majadahonda	"/>
+            <ComboBoxItem Content="Málaga	"/>
+            <ComboBoxItem Content="Manacor	"/>
+            <ComboBoxItem Content="Manises	"/>
+            <ComboBoxItem Content="Manlleu	"/>
+            <ComboBoxItem Content="Manresa	"/>
+            <ComboBoxItem Content="Maracena	"/>
+            <ComboBoxItem Content="Marbella	"/>
+            <ComboBoxItem Content="Marín	"/>
+            <ComboBoxItem Content="Martorell	"/>
+            <ComboBoxItem Content="Martos	"/>
+            <ComboBoxItem Content="Mataró	"/>
+            <ComboBoxItem Content="Mazarrón	"/>
+            <ComboBoxItem Content="Medina del Campo	"/>
+            <ComboBoxItem Content="Mejorada del Campo	"/>
+            <ComboBoxItem Content="Melilla	"/>
+            <ComboBoxItem Content="Mérida	"/>
+            <ComboBoxItem Content="Mieres	"/>
+            <ComboBoxItem Content="Mijas	"/>
+            <ComboBoxItem Content="Miranda de Ebro	"/>
+            <ComboBoxItem Content="Mislata	"/>
+            <ComboBoxItem Content="Mogán	"/>
+            <ComboBoxItem Content="Moguer	"/>
+            <ComboBoxItem Content="Molina de Segura	"/>
+            <ComboBoxItem Content="Mollet del Vallés	"/>
+            <ComboBoxItem Content="Moncada	"/>
+            <ComboBoxItem Content="Mondragón	"/>
+            <ComboBoxItem Content="Montehermoso	"/>
+            <ComboBoxItem Content="Montilla	"/>
+            <ComboBoxItem Content="Morón de la Frontera	"/>
+            <ComboBoxItem Content="Móstoles	"/>
+            <ComboBoxItem Content="Motril	"/>
+            <ComboBoxItem Content="Murcia	"/>
+            <ComboBoxItem Content="Narón	"/>
+            <ComboBoxItem Content="Navalcarnero	"/>
+            <ComboBoxItem Content="Nerja	"/>
+            <ComboBoxItem Content="Níjar	"/>
+            <ComboBoxItem Content="Novelda	"/>
+            <ComboBoxItem Content="Oleiros	"/>
+            <ComboBoxItem Content="Olesa de Montserrat	"/>
+            <ComboBoxItem Content="Oliva	"/>
+            <ComboBoxItem Content="Olot	"/>
+            <ComboBoxItem Content="Onda	"/>
+            <ComboBoxItem Content="Orense	"/>
+            <ComboBoxItem Content="Orihuela	"/>
+            <ComboBoxItem Content="Oviedo	"/>
+            <ComboBoxItem Content="Paiporta	"/>
+            <ComboBoxItem Content="Pájara	"/>
+            <ComboBoxItem Content="Palafrugell	"/>
+            <ComboBoxItem Content="Palencia	"/>
+            <ComboBoxItem Content="Palma de Mallorca	"/>
+            <ComboBoxItem Content="Palma del Río	"/>
+            <ComboBoxItem Content="Pamplona	"/>
+            <ComboBoxItem Content="Paracuellos de Jarama	"/>
+            <ComboBoxItem Content="Parla	"/>
+            <ComboBoxItem Content="Paterna	"/>
+            <ComboBoxItem Content="Piélagos	"/>
+            <ComboBoxItem Content="Pilar de la Horadada	"/>
+            <ComboBoxItem Content="Pineda de Mar	"/>
+            <ComboBoxItem Content="Pinto	"/>
+            <ComboBoxItem Content="Plasencia	"/>
+            <ComboBoxItem Content="Ponferrada	"/>
+            <ComboBoxItem Content="Pontevedra	"/>
+            <ComboBoxItem Content="Portugalete	"/>
+            <ComboBoxItem Content="Pozuelo de Alarcón	"/>
+            <ComboBoxItem Content="Premiá de Mar	"/>
+            <ComboBoxItem Content="Priego de Córdoba	"/>
+            <ComboBoxItem Content="Puente Genil	"/>
+            <ComboBoxItem Content="Puerto de la Cruz	"/>
+            <ComboBoxItem Content="Puerto del Rosario	"/>
+            <ComboBoxItem Content="Puerto Real	"/>
+            <ComboBoxItem Content="Puertollano	"/>
+            <ComboBoxItem Content="Redondela	"/>
+            <ComboBoxItem Content="Requena	"/>
+            <ComboBoxItem Content="Reus	"/>
+            <ComboBoxItem Content="Rincón de la Victoria	"/>
+            <ComboBoxItem Content="Ripollet	"/>
+            <ComboBoxItem Content="Rivas-Vaciamadrid	"/>
+            <ComboBoxItem Content="Rojales	"/>
+            <ComboBoxItem Content="Ronda	"/>
+            <ComboBoxItem Content="Roquetas de Mar	"/>
+            <ComboBoxItem Content="Rota	"/>
+            <ComboBoxItem Content="Rubí	"/>
+            <ComboBoxItem Content="S. Bartolomé de Tirajana	"/>
+            <ComboBoxItem Content="Sabadell	"/>
+            <ComboBoxItem Content="Sagunto	"/>
+            <ComboBoxItem Content="Salamanca	"/>
+            <ComboBoxItem Content="Salou	"/>
+            <ComboBoxItem Content="Salt	"/>
+            <ComboBoxItem Content="San Cristóbal de la Laguna	"/>
+            <ComboBoxItem Content="San Fernando	"/>
+            <ComboBoxItem Content="San Fernando de Henares	"/>
+            <ComboBoxItem Content="San Javier	"/>
+            <ComboBoxItem Content="San Roque	"/>
+            <ComboBoxItem Content="San Sebastián	"/>
+            <ComboBoxItem Content="San Sebastián de los Reyes	"/>
+            <ComboBoxItem Content="Sanlúcar de Barrameda	"/>
+            <ComboBoxItem Content="Santa Cruz de Tenerife	"/>
+            <ComboBoxItem Content="Santa Pola	"/>
+            <ComboBoxItem Content="Santander	"/>
+            <ComboBoxItem Content="Santiago de Compostela	"/>
+            <ComboBoxItem Content="Segovia	"/>
+            <ComboBoxItem Content="Sestao	"/>
+            <ComboBoxItem Content="Sevilla	"/>
+            <ComboBoxItem Content="Sitges	"/>
+            <ComboBoxItem Content="Soria	"/>
+            <ComboBoxItem Content="Talavera de la Reina	"/>
+            <ComboBoxItem Content="Tarragona	"/>
+            <ComboBoxItem Content="Teruel	"/>
+            <ComboBoxItem Content="Toledo	"/>
+            <ComboBoxItem Content="Tomares	"/>
+            <ComboBoxItem Content="Tomelloso	"/>
+            <ComboBoxItem Content="Torrejón de Ardoz	"/>
+            <ComboBoxItem Content="Torremolinos	"/>
+            <ComboBoxItem Content="Torrevieja	"/>
+            <ComboBoxItem Content="Tortosa	"/>
+            <ComboBoxItem Content="Tres Cantos	"/>
+            <ComboBoxItem Content="Tudela	"/>
+            <ComboBoxItem Content="Úbeda	"/>
+            <ComboBoxItem Content="Utrera	"/>
+            <ComboBoxItem Content="Valdemoro	"/>
+            <ComboBoxItem Content="Valdepeñas	"/>
+            <ComboBoxItem Content="Valencia	"/>
+            <ComboBoxItem Content="Valladolid	"/>
+            <ComboBoxItem Content="Valls	"/>
+            <ComboBoxItem Content="Vigo	"/>
+            <ComboBoxItem Content="Viladecans	"/>
+            <ComboBoxItem Content="Villajoyosa	"/>
+            <ComboBoxItem Content="Villanueva de la Serena	"/>
+            <ComboBoxItem Content="Vitoria	"/>
+            <ComboBoxItem Content="Zamora	"/>
+            <ComboBoxItem Content="Zaragoza	"/>
+            <!--#endregion-->
         </ComboBox>
         <Frame x:Name="FrameDatos" 
                Grid.Row="1" 
