--- a/SimpleWeather/Paginas/Principal.xaml
+++ b/SimpleWeather/Paginas/Principal.xaml
@@ -7,7 +7,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="#FF1E323C">
+    <Grid x:Name="gridPrincipal"
+        Background="#FF1E323C">
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
             <RowDefinition/>
